# python-etl

./: .gitignore  pyproject.toml
tests/: test_python_etl.py
